--- a/components/MDXEditor/index.css
+++ b/components/MDXEditor/index.css
@@ -131,7 +131,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: var(--color-foreground);
+  color: var(--foreground);
   background-color: var(--primary);
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
